--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,501 +1,416 @@
-/* [!] Do the nav tomorrow first or second thing!*/
-/* [*] put the black overlay thingy on the hero image!*/
-/* [ ] start flexing(the images and not your muscels)*/
-/* [*] fix the 'hr' */
-/* [*] style the stupid buttons */
-/* [!] Add prefixes */
-/* [*] scrolling with css */
-/* [*] map thing is made the things that it
-	   cannot make the display:none; to be done!!! */
-/* [ ] if possible, add light box!*/  
-
-html, body {
-	width: 100%;
-	height: 100%;
-	font-family: 'Roboto', sans-serif;
-	margin: 0;
+html,
+body {
+    width: 100%;
+    height: 100%;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
-
-#logo {
-	width: auto;
-	height: 50px;
-	margin-left: 30px; 
+.navbar {
+    overflow: hidden;
+    background-color: white;
 }
-
-.dropbtn {
-    background-color: #A86024;
-    color: white;
-    padding: 16px;
+.navbar a {
+    float: left;
     font-size: 16px;
-    border: none;
-    cursor: pointer;
-    float: right;
-    transition: all 200ms cubic-bezier(0.25, 0.39, 0.39, 2.01);
-    
+    color: #231308;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
-
-#nav {
+.dropdown {
+    float: right;
+    overflow: hidden;
+}
+.dropdown .dropbtn {
+    font-size: 24px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: #A86024;
+    height: 110px;
+    width: 200px;
+}
+.dropdown:hover .dropbtn {
+    background-color: #231308;
+}
+.navbar a:hover {
+    color: #A86024;
+}
+.dropdown-content {
+    display: none;
     position: absolute;
-    top: -15px;
-    right: 0px;
-    padding: 0px;
-    display: none; 
     background-color: #f9f9f9;
-    width: 300px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
-
-@media all and (max-width: 786px) {
-	#nav {width: 100%;}
-}
-
-#nav a {
+.dropdown-content a {
+    float: none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
-    text-align: center; 
+    display: block;
+    text-align: left;
+}
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+.dropdown:hover .dropdown-content {
     display: block;
 }
-
-#nav a:hover {background-color: #f1f1f1}
-
-nav:hover #nav {
-    display: block;
-}
-
-nav:hover .dropbtn {
-    background-color: #231308;
-}
-
-
-header {
-	background-color: #fff;
-	height: 50px;
-	width: 100%;
-	-webkit-box-shadow: 10px 0 15px 5px rgba(60, 60, 60, 0.1);
-	box-shadow: 10px 0 15px 5px rgba(60, 60, 60, 0.1);
-	position: fixed;
-	z-index: 15;
-
-}
-
-
 ul li {
-	height: 20px;
+    height: 20px;
     margin: 10px;
     list-style-type: none;
-
 }
-
 ul li a {
-	text-decoration: none;
+    text-decoration: none;
 }
-
-
 .about-hero-image {
-	height: 100%;
-	background-image: url("../IMAGES/about.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: bottom;
+    height: 100%;
+    background-image: url("../IMAGES/about.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
 }
-
-.hero-image h1, .about-hero-image h1, .gallery-hero-image h1 {
-	text-align: center;
-	color: #fff;
-	position: absolute;
-	top: 40%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	font-size: 33px;
-	letter-spacing: 10px;
+.hero-image h1,
+.about-hero-image h1,
+.gallery-hero-image h1 {
+    text-align: center;
+    color: #fff;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 43px;
+    letter-spacing: 10px;
 }
-
-section button, #map-button {
-	border: none; 
-    color: white; 
-    padding: 14px 28px; 
+section button,
+#map-button {
+    border: none;
+    color: white;
+    padding: 14px 28px;
     cursor: pointer;
-    outline: none; 
+    outline: none;
     margin: auto;
-	text-align: center;
-	background-color: #A86024;
-	position: absolute;
-	top: 55%;
-	left:42.3901%;
-	display: block;
-	
-	transition: 2s ease opacity;
+    text-align: center;
+    background-color: #A86024;
+    position: absolute;
+    top: 55%;
+    left: 42.3901%;
+    display: block;
+    transition: 2s ease opacity;
     -webkit-transition: 2s ease opacity;
     -moz-transition: 2s ease opacity;
     -ms-transition: 2s ease opacity;
     transition: transform 200ms cubic-bezier(0.25, 0.39, 0.39, 1.55);
 }
-
-@media all and (max-width: 700px) {	
-	.hero-image h1, .about-hero-image h1, .gallery-hero-image h1 {
-	font-size: 1.5625em;
-	}
+@media all and (max-width: 700px) {
+    .hero-image h1,
+    .about-hero-image h1,
+    .gallery-hero-image h1 {
+        font-size: 1.5625em;
+    }
 }
-
-@media all and (max-width: 400px) {	
-	.hero-image h1, .about-hero-image h1, .gallery-hero-image h1 {
-	font-size: 1em;
-	}
+@media all and (max-width: 400px) {
+    .hero-image h1,
+    .about-hero-image h1,
+    .gallery-hero-image h1 {
+        font-size: 1em;
+    }
 }
-
-section button:hover, #map-button:hover {
-	background: #231308;
-	transform: scale(1.02, 1.02);
-	border: 1px solid #fff;
+section button:hover,
+#map-button:hover {
+    background: #231308;
+    transform: scale(1.02, 1.02);
+    border: 1px solid #fff;
 }
-
 .hero-image {
-	height: 100%;
-	background-image: url("../IMAGES/home.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: bottom;
+    height: 100%;
+    background-image: url("../IMAGES/home.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
 }
-
 .gallery-hero-image {
-	height: 100%;
-	background-image: url("../IMAGES/gallery.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: bottom;
+    height: 100%;
+    background-image: url("../IMAGES/gallery.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
 }
-
 #box-overlay {
-	width: 90%;
-	height:80%;
-	background-color: #000;
-	position: absolute;
-	top: 54%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	opacity: 0.3;
-
+    width: 90%;
+    height: 80%;
+    background-color: #000;
+    position: absolute;
+    top: 54%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0.3;
 }
-
-
 #to-here {
-	width: 100%;
-	height: 5px;
-	visibility: hidden;
-	background-color: yellow;
-	position: absolute;
-	top: 93%;
+    width: 100%;
+    height: 5px;
+    visibility: hidden;
+    background-color: yellow;
+    position: absolute;
+    top: 93%;
 }
-
 main {
-	max-width: 1250px;
-	margin: 20px auto;
-
+    max-width: 1250px;
+    margin: 20px auto;
 }
-
 hr {
-	max-width: 100px;
-	border-top: 3px solid #A86024;
+    max-width: 100px;
+    border-top: 3px solid #A86024;
 }
-
-.services, .the-team, .information, .places, .plan {
-	text-align: center;
+.plan p {
+    margin: 50px;
 }
-
-.services, .the-team, .information, .places {
-	margin-top: 100px;
+.services,
+.the-team,
+.information,
+.places,
+.plan {
+    text-align: center;
 }
-
-.services p, .the-team p {
-	max-width: 660px;
-	text-align: center;
-	margin: 0 auto;
+.services,
+.the-team,
+.information,
+.places {
+    margin-top: 100px;
 }
-
+.services p,
+.the-team p {
+    max-width: 660px;
+    text-align: center;
+    margin: 0 auto;
+}
 .services p + p {
-	margin-top: 20px;
+    margin-top: 20px;
 }
-
-@media all and (max-width: 700px) {	
-	.services p, .the-team p, .infomation { margin: 0 5%;}
+@media all and (max-width: 700px) {
+    .services p,
+    .the-team p,
+    .infomation {
+        margin: 0 5%;
+    }
 }
-
-/*.images1 {
-
-}*/
-
 .images1 img {
-	margin: 50px 0px;
-	display: inline-block;
-	border: 4px solid #231308;
-
+    margin: 50px 0px;
+    display: inline-block;
+    border: 4px solid #231308;
 }
-
 @media all and (max-width: 1250px) {
-
-	.images1 img, .images3 img {
-		margin: 10px 50px;
-		display: inline-block;
-	}
-
-
+    .images1 img,
+    .images3 img {
+        margin: 10px 50px;
+        display: inline-block;
+    }
 }
-	
-
 .images2 {
-	width: 95%;
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-
-.images2 img, .images3 img {
-	width: 300px;
-	border: 4px solid #231308;
-	margin-top: 50px;
+.images2 img,
+.images3 img {
+    width: 300px;
+    border: 4px solid #231308;
+    margin-top: 50px;
 }
-
-
 .images2 .featured-images {
-	margin: 50px auto;
-	text-align: center;
-	float: left;
-
-} 
-
+    margin: 50px auto;
+    text-align: center;
+    float: left;
+}
 .culture h2 {
-	text-align: center;
-	padding-top: 80px;
-	padding-bottom: 20px;
-	margin: auto;
-	width: 80%;
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 20px;
+    margin: auto;
+    width: 80%;
 }
-
 #full {
-	width:100%;
-	height: 3px;
-	margin: 30px 0;
-	background-color: #231308;
-	position: relative;
-	top: -420px;
+    width: 100%;
+    height: 3px;
+    margin: 30px 0;
+    background-color: #231308;
+    position: relative;
+    top: -420px;
 }
-
 .contact {
-	margin-top: 20px;
-	float: left;
-	width: 40%;
-	position: relative;
-	left:100px;
+    margin-top: 20px;
+    float: left;
+    width: 40%;
+    position: relative;
+    left: 100px;
 }
-
 .contact p {
-	font-size: 12px;
+    font-size: 12px;
 }
-
-.contact p, .contact h3 {
-	text-align: left;
+.contact p,
+.contact h3 {
+    text-align: left;
 }
-
 i {
-	margin:10px 10px 10px 0;
-	font-size: 1.25em;
-	color: #A86024;
+    margin: 10px 10px 10px 0;
+    font-size: 1.25em;
+    color: #A86024;
 }
-
 .input-group {
-	color: brown;
-	margin-top: 20px;
-	width: 350px;
-	display: inline-block;
+    color: brown;
+    margin-top: 20px;
+    width: 350px;
+    display: inline-block;
 }
-
-.topfield1, .topfield2 {
-	margin: 0;
-	width: 46%;
-	height: 30px;
-	border: 2px solid #231308;
-	display: inline-block;
-
+.topfield1,
+.topfield2 {
+    margin: 0;
+    width: 46%;
+    height: 30px;
+    border: 2px solid #231308;
+    display: inline-block;
 }
-
 .bottomfield {
-	margin: 0;
-	width: 95%;
-	height: 160px;
-	border: 2px solid #231308;
+    margin: 0;
+    width: 95%;
+    height: 160px;
+    border: 2px solid #231308;
 }
-
 #submit-btn {
-	border: none; 
-    color: white; 
-    padding: 14px 28px; 
+    border: none;
+    color: white;
+    padding: 14px 28px;
     cursor: pointer;
     outline: none;
-    background-color: #A86024; 
-	text-align: center;
-	position: relative;
-	left: -82px;
-	transform: translate(-50%, -50%);
-	transition: 2s ease opacity;
+    background-color: #A86024;
+    text-align: center;
+    position: relative;
+    left: -82px;
+    transform: translate(-50%, -50%);
+    transition: 2s ease opacity;
     -webkit-transition: 2s ease opacity;
     -moz-transition: 2s ease opacity;
     -ms-transition: 2s ease opacity;
-  }
-
-   #submit-btn:hover {
-   	background-color: #231308;
-  }
-
-   @media all and (max-width: 786px) {
-
-   	.contact {
-	
-	/*float: left;*/
-	margin: auto;
-	width: 100%;
-	display: block;	
-	position: static;
-	
 }
-   	 
-   	.topfield1, .topfield2 {
-   		width: 95%;
-   		margin: 5px;
-
-	   }
-
-   	.contact p, .contact h3 {
-	text-align: center;
-
-   	}
-  }
-
-   @media all and (max-width: 480px) {
-
-.input-group {
-	
-	width: 100%;
-	display: block;
-
+#submit-btn:hover {
+    background-color: #231308;
 }
-
-.topfield1, .topfield2 {
-
-	width: 95%;
-	height: 30px;
-	
-
+@media all and (max-width: 786px) {
+    .contact {
+        margin: auto;
+        width: 100%;
+        display: block;
+        position: static;
+    }
+    .topfield1,
+    .topfield2 {
+        width: 95%;
+        margin: 5px;
+    }
+    .contact p,
+    .contact h3 {
+        text-align: center;
+    }
 }
-
+@media all and (max-width: 480px) {
+    .input-group {
+        width: 100%;
+        display: block;
+    }
+    .topfield1,
+    .topfield2 {
+        width: 95%;
+        height: 30px;
+    }
 }
-
 footer {
-	clear: both;
+    clear: both;
 }
-
 footer .map {
-	background-color: #231308;
-	width: 100%;
-	min-height: 100px;
-	max-height: 700px;	
+    background-color: #231308;
+    width: 100%;
+    min-height: 100px;
+    max-height: 700px;
 }
-
 footer #map-button {
-	color: #fff;
-	display: inline-table;
-	position: relative;
-	top: 8%;
-	left: 42.3901%;
-	}
-
-
-
+    color: #fff;
+    display: inline-table;
+    position: relative;
+    top: 8%;
+    left: 42.3901%;
+}
 #map-block {
-	
     width: 100%;
     min-height: 200px;
-	max-height: 500px;
-	padding-bottom:15px;
+    max-height: 500px;
+    padding-bottom: 15px;
     text-align: center;
-    margin:20px auto;
+    margin: 20px auto;
     display: none;
-    
 }
-
 #map-block p {
-	color: #fff;
-	font-size: 12px;
-	margin-top: 50px;
+    color: #fff;
+    font-size: 12px;
+    margin-top: 50px;
 }
-
 button#map-button {
-	position: relative;
-	top: 30px;
+    position: relative;
+    top: 30px;
 }
-
 #box {
-	width: 100%;
-	height: 20px;
+    width: 100%;
+    height: 20px;
 }
-
 #box1 {
-	width: 100%;
-	height: 100px;
+    width: 100%;
+    height: 100px;
 }
-
 footer small {
-
-	width: 228px;
-	padding:18px 0;
-	display: block;
-	margin: auto;
-	/*position: relative;
-	top: 30%;
-	left: 50%;
-	transform: translate(-50%, -50%);*/
+    width: 228px;
+    padding: 18px 0;
+    display: block;
+    margin: auto;
 }
-
 #map {
-        height: 400px;
-        width: 80%;
-        margin: 0 auto;
+    height: 400px;
+    width: 80%;
+    margin: 0 auto;
 }
-
 @media all and (max-width: 480px) {
-		#map {width: 100%;}
+    #map {
+        width: 100%;
+    }
 }
-
-
 .video-container {
-position: relative;
-padding-bottom: 56.25%;
-padding-top: 30px; height: 0; overflow: hidden;
-border: 3px solid #000;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+    border: 3px solid #000;
 }
- 
 .video-container iframe,
 .video-container object,
 .video-container embed {
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
-
 .Morninglive {
-	max-width: 60%;
-	height: auto;
-	margin: 0 auto;
-	padding: 20px;
+    max-width: 60%;
+    height: auto;
+    margin: 0 auto;
+    padding: 20px;
 }
-
- @media all and (max-width: 480px) {
- 	.Morninglive {
- 		max-width: 90%;
-	}
- }
-
-
+@media all and (max-width: 480px) {
+    .Morninglive {
+        max-width: 90%;
+    }
+}
